# shippai

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md
examples/python/: Makefile  README.md  native.h  setup.py
examples/python/rust/: Cargo.toml
examples/python/rust/src/: lib.rs
examples/python/shippai_example/: __init__.py
examples/python/tests/: test_basic.py
python/: .gitignore  Makefile  README.rst  setup.cfg  setup.py
python/example/: Makefile  README.md  cbindgen.toml  native.h  setup.py
python/example/rust/src/: lib.rs
python/example/shippai_example/: __init__.py  _native.py  _native__ffi.py
python/example/tests/: test_basic.py
python/shippai/: __init__.py
python/tests/: test_core.py
rust/: Cargo.toml  README.md
rust/shippai_derive/: Cargo.toml
rust/shippai_derive/src/: lib.rs
rust/src/: lib.rs
