[package]
name = "shippai"
version = "0.2.3"
description = "failure in other languages"
authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/untitaker/shippai"

[dependencies]
failure = "0.1"

[dependencies.shippai_derive]
version = "0.2"
path = "./shippai_derive"
