[package]
name = "shippai_derive"
description = "macros for shippai"
version = "0.2.3"
authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"

repository = "https://github.com/untitaker/shippai"

[dependencies]
syn = "0.13"
quote = "0.5"
synstructure = "0.8"

[lib]
proc-macro = true
