[package]
name = "shippai-example"
version = "0.1.0"
authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]

[lib]
name = "shippai_example"
crate-type = ["cdylib"]

[dependencies]
# backtrace is not required, only if you want merged stacktraces
failure = { version = "0.1", features = ["backtrace"] }
shippai = { path = "../../../rust/", version = "*" }

[build-dependencies]
cbindgen = "0.4"
